--- a/app.css
+++ b/app.css
@@ -3,3 +3,15 @@ html, body {
     margin: 0;
     overflow: hidden;
 }
+
+.leftAnalog {
+    position: absolute;
+    left: 0;
+    bottom : 0;
+}
+
+.rightAnalog {
+    position: absolute;
+    right: 0;
+    bottom : 0;
+}
